# deepseek-as-subagent

./: Dockerfile  README.md  README.zh-CN.md  install.sh  pyproject.toml  uninstall.sh
adapters/codex/: README.md  instructions.md
commands/: ds-impl.md
contracts/: config_plumbing.example.json  implement.example.json  logging_diagnostics.example.json  readonly_scan.example.json  test_writer.example.json
skills/delegate-to-deepseek/: SKILL.md
src/deepseek_mcp/: agent_loop.py  config.py  contract.py  handoff.py  safety.py  server.py  tools.py
tests/: test_agent_loop_empty_tools.py  test_contract_path_policy.py  test_contract_schema.py  test_contract_tool_permissions.py  test_modes.py  test_structured_result.py
